Fixed incorrectly formatted .gitignore files - Jason G

--- a/CANlogger/canlogger/.gitignore
+++ b/CANlogger/canlogger/.gitignore
@@ -1,6 +1,5 @@
-# Do not ignore these extensions
+# Ignore all by default
+*
+# But not ignore these extensions
 !*.cpp
 !*.h
-
-# Ignore remainder by default
-**/*
