--- a/CANlogger/innomts/.gitignore
+++ b/CANlogger/innomts/.gitignore
@@ -1,6 +1,5 @@
-# Do not ignore these extensions
+# Ignore all by default
+*
+# But not ignore these extensions
 !*.cpp
 !*.h
-
-# Ignore remainder by default
-**/*
